insert a new entry
